--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ google-cloud-storage==1.12.0
 google-resumable-media==0.3.1
 googleapis-common-protos==1.5.3
 grpcio==1.12.1
-gunicorn=19.9.0
+gunicorn==19.9.0
 h5py==2.8.0
 html5lib==1.0.1
 httplib2==0.11.3
