--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ google-cloud-speech==0.36.0
 google-cloud-storage==1.12.0
 google-resumable-media==0.3.1
 googleapis-common-protos==1.5.3
+grpcio==1.12.1
 gunicorn==19.9.0
 matplotlib==2.2.3
 numpy==1.15.1
