--- a/requirements.txt
+++ b/requirements.txt
@@ -22,12 +22,13 @@ pandas==0.23.4
 pickleshare==0.7.4
 pydub==0.23.0
 pytube==9.2.3
+redis==2.10.6
 requests==2.19.1
 requests-oauthlib==1.0.0
+rq==0.12.0
 rsa==4.0
 scikit-learn==0.19.1
 scipy==1.1.0
 seaborn==0.9.0
 SpeechRecognition==3.8.1
 urllib3==1.23
-
